--- a/scss/block/_tile.scss
+++ b/scss/block/_tile.scss
@@ -1,6 +1,6 @@
 .tile {
   background: linear-gradient(0deg, rgba(0, 0, 0, -0.4), rgba(0, 0, 0, -0.4)),
-    url(../../img/tile.png) no-repeat;
+    url('../../img/tile.png') no-repeat;
   height: 532px;
 
 
