--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 
 body {
   max-width: 1600px;
+  margin: 0 auto;
 }
 
 .header .header__contact {
@@ -119,7 +120,7 @@ body {
 }
 
 .tile {
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url(../../img/tile.png) no-repeat;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../../img/tile.png") no-repeat;
   height: 532px;
 }
 .tile .tile__content {
@@ -165,9 +166,13 @@ body {
   text-align: center;
 }
 
+.product {
+  margin-bottom: 120px;
+}
 .product .container {
   margin: 0 auto;
   max-width: 1050px;
+  text-align: center;
 }
 .product .container .product__title {
   margin: 120px 0 56px 0;
@@ -179,5 +184,236 @@ body {
   color: #000000;
   font-size: 35px;
   line-height: 43px;
+}
+.product .container .product__card {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+@media (max-width: 1100px) {
+  .product .container .product__card {
+    justify-content: space-around;
+  }
+}
+.product .container .product__card .card {
+  width: 240px;
+  height: 264px;
+  background: #ffffff;
+  box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.25);
+  border-radius: 30px;
+  margin-bottom: 62px;
+}
+.product .container .product__card .card img {
+  margin-top: 60px;
+  margin-bottom: 44px;
+}
+.product .container .product__card .card p {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #000000;
+}
+.product .container .product__button {
+  width: 240px;
+  height: 60px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+  background: #e05100;
+  border-radius: 30px;
   text-align: center;
+}
+
+.about {
+  margin-bottom: 120px;
+}
+.about .container {
+  max-width: 1600px;
+  margin: 0 auto;
+  background-color: #404040;
+  display: flex;
+}
+.about .container .about__img {
+  display: block;
+  align-self: center;
+  max-width: 748px;
+  max-height: 748px;
+  width: auto;
+  height: auto;
+}
+@media (max-width: 1250px) {
+  .about .container .about__img {
+    max-width: 448px;
+    max-height: 448px;
+  }
+}
+.about .container .about__text {
+  padding: 120px 79px 98px 68px;
+}
+.about .container .about__text .about__text-title {
+  font-family: "Montserrat", sans-serif;
+  color: #ffffff;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 35px;
+  line-height: 43px;
+  margin-bottom: 80px;
+}
+.about .container .about__text .about__text-item {
+  font-family: "Montserrat", sans-serif;
+  color: #ffffff;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  margin-bottom: 31px;
+}
+.about .container .about__text .about__text-text {
+  font-family: "Montserrat", sans-serif;
+  color: #ffffff;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  margin-bottom: 20px;
+}
+.about .container .about__text .about__text-button {
+  width: 240px;
+  height: 60px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+  background: #e05100;
+  border-radius: 30px;
+  text-align: center;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.top .container {
+  margin: 0 auto;
+  max-width: 1050px;
+}
+.top .container .top__title {
+  text-align: center;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #000000;
+  font-size: 35px;
+  line-height: 43px;
+  margin-bottom: 80px;
+}
+.top .container .top__card {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.top .container .top__card .card {
+  width: 510px;
+  height: 350px;
+  box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.25);
+  border-radius: 30px;
+  display: flex;
+  margin-bottom: 30px;
+}
+.top .container .top__card .card .card__description {
+  width: 65%;
+  margin-left: 23px;
+}
+.top .container .top__card .card .card__description .card__description-img {
+  margin: 20px 0 27px;
+}
+.top .container .top__card .card .card__description .card__description-title {
+  margin-bottom: 12px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #000000;
+  font-size: 14px;
+  line-height: 17px;
+}
+.top .container .top__card .card .card__description .card__description-text {
+  margin-bottom: 10px;
+}
+.top .container .top__card .card .card__description .card__description-text p {
+  margin-bottom: 5px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #000000;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+}
+.top .container .top__card .card .card__description .card__description-color .color {
+  width: 15px;
+  height: 16px;
+  margin-right: 10px;
+  display: inline-block;
+  cursor: pointer;
+}
+.top .container .top__card .card .card__price {
+  position: relative;
+  width: 35%;
+  background-color: #404040;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+  text-align: center;
+  padding-top: 132px;
+}
+.top .container .top__card .card .card__price .card__price-content .content__color {
+  font-family: "Montserrat", sans-serif;
+  color: #ffffff;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 43px;
+}
+.top .container .top__card .card .card__price .card__price-content .content__text {
+  font-family: "Montserrat", sans-serif;
+  color: #ffffff;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  font-size: 22px;
+  line-height: 43px;
+}
+.top .container .top__card .card .card__price .card__price-add {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 69px;
+  height: 56px;
+  border-radius: 30px 0px;
+  background: #e05100;
+  color: #ffffff;
+  font-size: 40px;
 }/*# sourceMappingURL=style.css.map */
