--- a/scss/block/_top-product.scss
+++ b/scss/block/_top-product.scss
@@ -13,7 +13,7 @@
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
-      .card {
+      .cardTop {
         width: 510px;
         height: 350px;
         box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.25);
