--- a/scss/block/_fabrication.scss
+++ b/scss/block/_fabrication.scss
@@ -1,9 +1,9 @@
 .fabrication {
-  
   padding-bottom: 128px;
   background-color: $fone;
   .container {
-    max-width: 1050px;
+    max-width: 1090px;
+    padding: 0 20px;
     margin: 0 auto;
 
     .fabrication__title {
@@ -17,8 +17,15 @@
     .fabrication__info {
       display: flex;
       width: 100%;
+      @media (max-width: 900px) {
+        flex-direction: column;
+        margin: 0 auto;
+      }
       .fabrication__info-left {
         width: 35%;
+        @media (max-width: 900px) {
+          width: 100%;
+        }
         .left__logo {
           width: 231px;
           height: 74px;
@@ -27,8 +34,14 @@
           text-align: center;
           padding-top: 9px;
           margin-bottom: 50px;
+          @media (max-width: 900px) {
+            margin: 0 auto 50px;
+          }
         }
         .left__potential {
+          @media (max-width: 900px) {
+            display: flex;
+          }
           .potential {
             display: flex;
             align-items: center;
@@ -42,12 +55,28 @@
               line-height: 17px;
               padding-left: 30px;
               padding-right: 32px;
+              @media (max-width: 900px) {
+                padding-left: 10px;
+                padding-right: 10px;
+              }
             }
           }
         }
       }
       .fabrication__info-right {
+        display: flex;
         width: 65%;
+        @media (max-width: 900px) {
+          width: 100%;
+          justify-content: center;
+        }
+
+        iframe {
+          @media (max-width: 700px) {
+            width: 487px;
+            height: 272px;
+          }
+        }
       }
     }
   }
