--- a/scss/block/_about.scss
+++ b/scss/block/_about.scss
@@ -1,26 +1,50 @@
 .about {
   // margin-bottom: 120px;
+  background-color: $fone;
   .container {
     max-width: 1600px;
     margin: 0 auto;
-    background-color: $fone;
+    
     display: flex;
+    align-items: center;
+
+    @media (max-width: 1200px) {
+      flex-wrap: wrap;
+      justify-content: center;
+      // max-width: 590px;
+    }
+    @media (max-width: 1100px) {
+
+      max-width: 630px;
+      padding: 0 20px;
+    }
 
     .about__img {
       display: block;
       align-self: center;
-      max-width: 748px;
-      max-height: 748px;
-      width: auto;
-      height: auto;
+      width: 50%;
+      // max-width: 748px;
+      // max-height: 748px;
+      // width: auto;
+      // height: auto;
 
-      @media (max-width: 1250px) {
-        max-width: 448px;
-        max-height: 448px;
+      @media (max-width: 1100px) {
+        // max-width: 448px;
+        width: 100%;
       }
     }
     .about__text {
-      padding: 120px 79px 98px 68px;
+      width: 50%;
+      padding: 0 79px 0 68px;
+      @media (max-width: 1300px) {
+        padding: 0 35px 0 35px;
+      }
+      @media (max-width: 1100px) {
+        // width: 590px;
+        width: 100%;
+        padding: 20px 35px 20px 35px;
+      }
+
       .about__text-title {
         @include contact-text-white;
         font-style: normal;
@@ -28,6 +52,12 @@
         font-size: 35px;
         line-height: 43px;
         margin-bottom: 80px;
+        @media (max-width: 1300px) {
+          margin-bottom: 30px;
+        }
+        @media (max-width: 1200px) {
+          width: 590px;
+        }
       }
       .about__text-item {
         @include contact-text-white;
