--- a/scss/block/_advantages.scss
+++ b/scss/block/_advantages.scss
@@ -4,7 +4,8 @@
 
   .container {
     margin: 0 auto;
-    max-width: 1050px;
+    max-width: 1090px;
+    padding: 0 20px;
     text-align: center;
     
 
