--- a/scss/block/_footer.scss
+++ b/scss/block/_footer.scss
@@ -1,13 +1,23 @@
 .footer {
   padding-top: 60px;
+
   .container {
-    max-width: 1050px;
+    max-width: 1090px;
+    padding: 0 20px;
     margin: 0 auto;
+
     .footer__content {
       display: flex;
       width: 100%;
+
       .footer__conten-left {
         width: 50%;
+
+        @media (max-width: 900px) {
+          width: 35%;
+          
+        }
+
         .left__title {
           @include contact-text-black;
           font-size: 20px;
@@ -54,8 +64,13 @@
       .footer__conten-right {
         width: 50%;
         display: flex;
+        @media (max-width: 900px) {
+          width: 65%;
+          
+        }
         ul {
-          width: 200px;
+          width: 33.33%;
+          margin: 0 5px;
           .menu__title {
             margin-bottom: 20px;
             a {
