--- a/scss/block/_header.scss
+++ b/scss/block/_header.scss
@@ -1,13 +1,16 @@
 .header {
   .header__contact {
     background-color: $fone;
+    @media (max-width: 900px) {
+      display: none;
+    }
 
     .container {
       display: flex;
       justify-content: space-between;
       margin: 0 auto;
-      max-width: 1050px;
-      padding: 17.5px 0;
+      max-width: 1090px;
+      padding: 17.5px 20px;
 
       .contact {
         display: flex;
@@ -27,12 +30,18 @@
         }
         .contact__adress p {
           padding: 0 20px 0 30px;
+          @media (max-width: 1050px) {
+            padding: 0 10px;
+          }
         }
         .contact__timework {
           display: flex;
           align-items: center;
           border-right: 1px solid $text;
           padding: 0 20px;
+          @media (max-width: 1050px) {
+            padding: 0 10px;
+          }
         }
         .contact__timework p,
         .contact__timework img {
@@ -41,6 +50,9 @@
         }
         .contact__timework img {
           padding-right: 20px;
+          @media (max-width: 1050px) {
+            padding-right: 10px;
+          }
         }
 
         .contact__phone {
@@ -50,8 +62,11 @@
           .phone__numb1 {
             display: flex;
             flex-wrap: wrap;
-            width: 110px;
-            margin-right: 30px;
+            width: 120px;
+            padding-right: 30px;
+            @media (max-width: 1050px) {
+              padding-right: 10px;
+            }
           }
 
           .phone__numb2 {
@@ -59,6 +74,9 @@
         }
         .contact__phone img {
           padding: 0 20px;
+          @media (max-width: 1050px) {
+            padding: 0 10px;
+          }
         }
         .contact__phone div a {
           @include contact-text-white;
@@ -79,8 +97,8 @@
     justify-content: space-between;
     align-content: center;
     margin: 0 auto;
-    max-width: 1050px;
-    padding: 12.5px 0;
+    max-width: 1090px;
+    padding: 12.5px 20px;
 
     .menu {
       width: 82.5%;
@@ -88,14 +106,55 @@
       padding-top: 20px;
       display: flex;
       justify-content: space-between;
-      // align-content: center;
+      
+      @media (max-width: 900px) {
+        position: absolute;
+        right: 65px;
+        top: -350px;
+        background-color: $fone;
+        width: 200px;
+        height: 315px;
+        z-index: 666;
+        padding: 20px 20px 20px;
+        border-radius: 15px;
+        transition: top 0.5s;
+        flex-direction: column;
+      }
 
       .menu__text {
         @include contact-text-black;
+        padding: 10px 0;
         font-size: 12px;
         line-height: 15px;
+        @media (max-width: 900px) {
+          color: $text;
         
+        }
       }
+      .menu__text:hover {
+        opacity: 0.7;
+      }
+    }
+    .menu-active {
+      top: 15px;
+    }
+    .burger-menu {
+      display: none;
+      background-image: url("data:image/svg+xml,%3Csvg id='Layer_1' fill='%23404040' enable-background='new 0 0 512 512' height='512' viewBox='0 0 512 512' width='512' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m464.883 64.267h-417.766c-25.98 0-47.117 21.136-47.117 47.149 0 25.98 21.137 47.117 47.117 47.117h417.766c25.98 0 47.117-21.137 47.117-47.117 0-26.013-21.137-47.149-47.117-47.149z'/%3E%3Cpath d='m464.883 208.867h-417.766c-25.98 0-47.117 21.136-47.117 47.149 0 25.98 21.137 47.117 47.117 47.117h417.766c25.98 0 47.117-21.137 47.117-47.117 0-26.013-21.137-47.149-47.117-47.149z'/%3E%3Cpath d='m464.883 353.467h-417.766c-25.98 0-47.117 21.137-47.117 47.149 0 25.98 21.137 47.117 47.117 47.117h417.766c25.98 0 47.117-21.137 47.117-47.117 0-26.012-21.137-47.149-47.117-47.149z'/%3E%3C/svg%3E");
+      width: 40px;
+      height: 40px;
+      background-color: transparent;
+      background-size: contain;
+      transition: background-image 0.5s;
+
+      @media (max-width: 900px) {
+        display: block;
+      }
+    }
+    .burger-menu-active {
+      background-image: url("data:image/svg+xml,%3C%3Fxml%20version='1.0'%20encoding='iso-8859-1'%3F%3E%3C!--%20Generator:%20Adobe%20Illustrator%2016.0.0,%20SVG%20Export%20Plug-In%20.SVG%20Version:%206.00%20Build%200)%20--%3E%3C!DOCTYPE%20svg%20PUBLIC%20'-//W3C//DTD%20SVG%201.1//EN'%20'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'%3E%3Csvg%20version='1.1'%20fill='%23404040'%20id='Capa_1'%20xmlns='http://www.w3.org/2000/svg'%20xmlns:xlink='http://www.w3.org/1999/xlink'%20x='0px'%20y='0px'%20width='348.333px'%20height='348.334px'%20viewBox='0%200%20348.333%20348.334'%20style='enable-background:new%200%200%20348.333%20348.334;'%20xml:space='preserve'%3E%3Cg%3E%3Cpath%20d='M336.559,68.611L231.016,174.165l105.543,105.549c15.699,15.705,15.699,41.145,0,56.85%20c-7.844,7.844-18.128,11.769-28.407,11.769c-10.296,0-20.581-3.919-28.419-11.769L174.167,231.003L68.609,336.563%20c-7.843,7.844-18.128,11.769-28.416,11.769c-10.285,0-20.563-3.919-28.413-11.769c-15.699-15.698-15.699-41.139,0-56.85%20l105.54-105.549L11.774,68.611c-15.699-15.699-15.699-41.145,0-56.844c15.696-15.687,41.127-15.687,56.829,0l105.563,105.554%20L279.721,11.767c15.705-15.687,41.139-15.687,56.832,0C352.258,27.466,352.258,52.912,336.559,68.611z'/%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E%0A") ;
+
+
     }
   }
 }
