--- a/scss/block/_product.scss
+++ b/scss/block/_product.scss
@@ -1,10 +1,13 @@
 .product {
   padding-bottom: 120px;
   padding-top: 120px;
+  
   .container {
     margin: 0 auto;
-    max-width: 1050px;
+    max-width: 1090px;
+    padding: 0 20px;
     text-align: center;
+
     .product__title {
       margin-bottom: 56px;
       @include contact-text-black;
